@@ -1,0 +1,16 @@
+<?xml version='1.0'?>
+<!DOCTYPE platform SYSTEM "http://simgrid.gforge.inria.fr/simgrid.dtd">
+<platform version="3">
+<AS  id="AS0"  routing="Full">
+  <!-- Multiple pstate processor capacities can be defined as a list of powers specified for a given host -->
+  <!-- The enabled pstate can be set through the "pstate" attribute (lowest pstate corresponds to the highest processor power) -->
+  <host id="MyHost1" power="100.0Mf,50.0Mf,20.0Mf" pstate="0" >
+        <!--  List of min_power:max_power pairs (in Watts) corresponding to the power consumed when the processor is idle and when it is fully loaded -->
+        <!--  The list must contain one power pair for each previously defined pstate-->
+        <prop id="power_per_state" value="95.0:200.0, 93.0:170.0, 90.0:150.0" />
+  </host>
+  <host id="MyHost2" power="100.0Mf" >
+        <prop id="power_per_state" value="95.0:200.0" />
+  </host>
+</AS>
+</platform>
